# website

./: .gitignore  Cargo.toml  Procfile  app.json  build  deploy  hotreload  run
elm-src/src/: Main.elm
elm/chat/src/: Main.elm
elm/msgbox/src/: Main.elm
public/: index.html  style.css
scripts/: build  build-backend  build-frontend  deploy  hotreload
src/: main.rs  message.rs
static/: index.html  style.css
