[package]
name = "website"
version = "0.1.0"
authors = ["Ulisse Mini <ulisse.mini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"

actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"

futures = "0.3.*"
chrono = "0.4"
chrono-tz = "0.5"

# Used for discord webhook updating
awc = { version = "1.0", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
